--- a/ray_FrustumTracing/ray_FrustumTracing.vcxproj
+++ b/ray_FrustumTracing/ray_FrustumTracing.vcxproj
@@ -115,6 +115,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <StackReserveSize>8192</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
