--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ ModelManifest.xml
 /ray_FrustumTracing/data/Genelec8020.mat
 /ray_FrustumTracing/data/Genelec8020.bin
 /ray_FrustumTracing/data/HRIR.bin
+/roomAcoustics.VC.VC.opendb
